disable ts on image slider

--- a/src/components/ImageSlider.astro
+++ b/src/components/ImageSlider.astro
@@ -60,6 +60,8 @@ const images = Array.from(
   }
 </style>
 <script>
+  // @ts-nocheck
+
   const scrollers = document.querySelectorAll(".scroller");
 
   if (!window.matchMedia("(prefers-reduced-motion: reduce)").matches) {
@@ -71,7 +73,7 @@ const images = Array.from(
       scroller.setAttribute("data-animated", true);
 
       const scrollerInner = scroller.querySelector(".scroller__inner");
-      const scrollerContent = Array.from(scrollerInner.children);
+      const scrollerContent = Array.from(scrollerInner!.children);
 
       scrollerContent.forEach((item) => {
         const duplicatedItem = item.cloneNode(true);
