disable upoznajte-nas-tim

--- a/src/pages/o-nama.astro
+++ b/src/pages/o-nama.astro
@@ -30,7 +30,7 @@ const paragraphes = [
         </>
       ))
     }
-    <a href="/upoznajte-nas-tim">
+    <a href="/upoznajte-nas-tim_">
       <Button text="Upoznajte naš tim" outlined />
     </a>
   </div>
