--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -38,6 +38,9 @@ const { mainLinks } = Astro.props;
     color: var(--text-main);
     font-size: 1.125rem;
     font-weight: 600;
+  } a:hover {
+    color: var(--hover);
+    
   }
   .hamburger {
     height: 2rem;
