--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -158,4 +158,7 @@ const mainLinks = ["o nama", "ulaznice", "kupovina grupnih karata", "kontakt"];
   .text-white {
     color: var(--text-white);
   }
+  .shadow {
+    filter: drop-shadow(2px 8px 10px rgba(124, 73, 5, 0.16));
+  }
 </style>
