--- a/src/components/ButtonCard.astro
+++ b/src/components/ButtonCard.astro
@@ -1,14 +1,18 @@
 ---
-import Button from "./Button.astro";
-import Input from "./Input.astro";
-import Dropdown from "./Dropdown.astro";
+import Button from './Button.astro'
+import Input from './Input.astro'
+import Dropdown from './Dropdown.tsx'
 
-const { heading, options, prices, dropdowns } = Astro.props;
+const { heading, options, prices, dropdowns } = Astro.props
 ---
 
 <div class="container">
   <h4>{heading}</h4>
-  {dropdowns.map((item: string) => <Dropdown label={item} />)}
+  {
+    dropdowns.map((options: string[]) => (
+      <Dropdown options={options} client:load />
+    ))
+  }
   <ul>{options.map((option: string) => <li>{option}</li>)}</ul>
   <div class="bottom">
     <div>
