--- a/src/pages/zahtev-za-rucak.astro
+++ b/src/pages/zahtev-za-rucak.astro
@@ -1,78 +1,75 @@
 ---
-import Layout from "../layouts/Layout.astro";
-import Input from "../components/Input.astro";
-import ButtonCard from "../components/ButtonCard.astro";
+import Layout from '../layouts/Layout.astro'
+import Input from '../components/Input.astro'
+import ButtonCard from '../components/ButtonCard.astro'
 
 const paragraphes = [
-  "Ukoliko imate potrebe za posebnim vrstama obroka ili druge napomene (alergije, verski obroci i sl.), molimo vas da napomenete.",
-  "Podnošenje ovog zahteva istovremeno predstavlja i podnošenje zahteva za izradu e-fakture za pravno lice - podnosioca zahteva. To podrazumeva sledeću proceduru: evidencija prometa na fiskalnoj kasi, refundacija tog fiskalnog isečka u istom danu i izrada e-fakture sa istim datumom prometa i iznosom prometa. Procedura će se sprovoditi sve do trenutka kada se programski omogući da evidencija prometa na fiskalnoj kasi podrazumevai automatsku izradu e-fakture, odnosno dođe do drugih uputstava nadležnih državnih organa.",
-];
+  'Ukoliko imate potrebe za posebnim vrstama obroka ili druge napomene (alergije, verski obroci i sl.), molimo vas da napomenete.',
+  'Podnošenje ovog zahteva istovremeno predstavlja i podnošenje zahteva za izradu e-fakture za pravno lice - podnosioca zahteva. To podrazumeva sledeću proceduru: evidencija prometa na fiskalnoj kasi, refundacija tog fiskalnog isečka u istom danu i izrada e-fakture sa istim datumom prometa i iznosom prometa. Procedura će se sprovoditi sve do trenutka kada se programski omogući da evidencija prometa na fiskalnoj kasi podrazumevai automatsku izradu e-fakture, odnosno dođe do drugih uputstava nadležnih državnih organa.',
+]
 
 const meals = [
   {
-    heading: "Dečiji dino obrok",
+    heading: 'Dečiji dino obrok',
     options: [
-      "Grilovana piletina 130g",
-      "Pire krompir",
-      "Salata",
-      "Hleb",
-      "Dino kolač",
-      "Sok",
+      'Grilovana piletina 130g',
+      'Pire krompir',
+      'Salata',
+      'Hleb',
+      'Dino kolač',
+      'Sok',
     ],
-    dropdowns: ["Cena obroka bez supe 800,00 din"],
+    dropdowns: [['Sa supom', 'Bez supe']],
     prices: [
-      "Cena obroka bez supe 800,00 din",
-      "Cena obroka sa supom 880,00 din",
+      'Cena obroka bez supe 800,00 din',
+      'Cena obroka sa supom 880,00 din',
     ],
   },
   {
-    heading: "Osnovnoškolski obrok 1",
-    options: ["Salata", "Lepinja", "Sok u čaši"],
-    dropdowns: [
-      "Pljeskavica / Pileći file - DD Menu",
-      "Pire krompir / Pomfrit - DD Menu",
-    ],
-    prices: ["Cena obroka je 700,00 din"],
+    heading: 'Osnovnoškolski obrok 1',
+    options: ['Salata', 'Lepinja', 'Sok u čaši'],
+    dropdowns: [['Pljeskavica', 'Pileći file'], ['Pire krompir', 'Pomfrit']],
+    prices: ['Cena obroka je 700,00 din'],
   },
   {
-    heading: "Osnovnoškolski obrok 2",
-    options: ["Pileća supa", "Hleb", "Salata"],
+    heading: 'Osnovnoškolski obrok 2',
+    options: ['Pileća supa', 'Hleb', 'Salata'],
     dropdowns: [
-      "Pljeskavica / Pileći file - DD Menu",
-      "Pire krompir / Pomfrit - DD Menu",
-      "Sa kolačem / Bez kolača - DD Menu",
+      ['Pljeskavica ', 'Pileći file'],
+      ['Pire krompir ', 'Pomfrit'],
+      ['Sa kolačem ', 'Bez kolača'],
     ],
     prices: [
-      "Cena obroka bez kolača 800,00 din",
-      "Cena obroka sa kolačem 900,00 din",
+      'Cena obroka bez kolača 800,00 din',
+      'Cena obroka sa kolačem 900,00 din',
     ],
   },
   {
-    heading: "Školski obrok",
-    options: ["Pljeskavica u lepinji sa prilozima", "Pomfrit", "Sok u čaši"],
-    prices: ["Cena obroka sa kolačem 500,00 din"],
+    heading: 'Školski obrok',
+    options: ['Pljeskavica u lepinji sa prilozima', 'Pomfrit', 'Sok u čaši'],
+    prices: ['Cena obroka sa kolačem 500,00 din'],
     dropdowns: [],
   },
   {
-    heading: "Obrok za odrasle",
+    heading: 'Obrok za odrasle',
     options: [
-      "Pileća supa",
-      "Pileća bečka šnicla 200g",
-      "Pomfrit",
-      "Salata",
-      "Lepinja",
-      "Kolač",
+      'Pileća supa',
+      'Pileća bečka šnicla 200g',
+      'Pomfrit',
+      'Salata',
+      'Lepinja',
+      'Kolač',
     ],
-    dropdowns: ["Sok u čaši / Kisela voda u čaši - DD Menu"],
-    prices: ["Cena obroka sa kolačem 950,00 din"],
+    dropdowns: [['Sok u čaši', 'Kisela voda u čaši']],
+    prices: ['Cena obroka sa kolačem 950,00 din'],
   },
   {
-    heading: "Lanč paket",
-    options: ["Pljeskavica u lepinji", "Mali pomfrit", "Čokoladna krofnica"],
-    dropdowns: ["Vodica / Sok u čaši - DD Menu"],
-    prices: ["Cena obroka sa kolačem 550,00 din"],
+    heading: 'Lanč paket',
+    options: ['Pljeskavica u lepinji', 'Mali pomfrit', 'Čokoladna krofnica'],
+    dropdowns: [['Vodica', 'Sok u čaši']],
+    prices: ['Cena obroka sa kolačem 550,00 din'],
   },
-];
+]
 ---
 
 <Layout title="Zahtev za ručak u restoranu"
