--- a/src/components/Input.astro
+++ b/src/components/Input.astro
@@ -1,14 +1,14 @@
 ---
-const { type, label, placeholder } = Astro.props;
+const { type, label, placeholder } = Astro.props
 ---
 
 <div>
   <label for={label}>{label}</label>
   {
-    type === "textarea" ? (
+    type === 'textarea' ? (
       <textarea placeholder={placeholder} />
     ) : (
-      <input type={type} id={label} placeholder={placeholder} />
+      <input type={type} id={label} placeholder={placeholder} value="" />
     )
   }
 </div>
